# Duplicate-File-Preventer

./: README.md  ensure_dependencies.sh  main.py  pyproject.toml  requirements.txt
duplicate_preventer/: __init__.py  _version.py  config.py  duplicate_handler.py  duplicate_monitor.py  utils.py
duplicate_preventer/older_code/: duplicate_file_preventer_v38.py  duplicate_monitor_mod_by_me.py  duplicate_monitor_v8.py
