[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-file-preventer"
dynamic = ["version"]
description = "Monitors folders for duplicate files created by Thunderbird's FiltaQuilla extension and automatically quarantines them before they sync to cloud storage."
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "RedBearAK"}
]
keywords = ["thunderbird", "duplicates", "filtaquilla", "cloud-sync", "file-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "watchdog>=3.0.0,<5.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.urls]
Homepage = "https://github.com/RedBearAK/Duplicate-File-Preventer"
Repository = "https://github.com/RedBearAK/Duplicate-File-Preventer"
Issues = "https://github.com/RedBearAK/Duplicate-File-Preventer/issues"

[project.scripts]
duplicate-preventer = "duplicate_preventer.duplicate_monitor:main"
duplicate-monitor = "duplicate_preventer.duplicate_monitor:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0,<25.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "flake8>=6.0.0,<8.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "duplicate_preventer._version.__version__"}

[tool.setuptools.packages.find]
include = ["duplicate_preventer*"]

[tool.setuptools.package-data]
duplicate_preventer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]